sh2c/tests/fixtures/diag_span_for_redecl.stderr.expected
compile error: diag_span_for_redecl.sh2:3:9: variable 'i' already declared in this scope (on this execution path). Did you mean to use `set i = ...`?
    for i in [1] { // Error: redeclaration (loop var shadows)
        ^
