sh2c/tests/fixtures/diag_span_for_redecl.sh2
func main() {
    let i = 0;
    for i in [1] { // Error: redeclaration (loop var shadows)
    }
}
